// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Kubernetes event watcher podAddedWatcher logs events 1`] = `
Array [
  Object {
    "data": undefined,
    "message": "Pod added: -- name: \\"jupyter-expectedName\\", type: \\"jupyter\\"",
    "metadata": undefined,
  },
]
`;

exports[`Kubernetes event watcher podAddedWatcher logs events 2`] = `
Array [
  Object {
    "data": undefined,
    "message": "Updated status record for \\"jupyter-expectedName\\" to \\"creating\\"",
    "metadata": undefined,
  },
]
`;

exports[`Kubernetes event watcher podDeletedWatcher logs events 1`] = `
Array [
  Object {
    "data": undefined,
    "message": "Pod deleted -- name: \\"jupyter-expectedName\\", type: \\"jupyter\\"",
    "metadata": undefined,
  },
]
`;

exports[`Kubernetes event watcher podReadyWatcher logs events 1`] = `
Array [
  Object {
    "data": undefined,
    "message": "Pod ready -- name: \\"jupyter-expectedName\\", type: \\"jupyter\\"",
    "metadata": undefined,
  },
]
`;

exports[`Kubernetes event watcher podReadyWatcher logs events 2`] = `
Array [
  Object {
    "data": undefined,
    "message": "Updated status record for \\"expectedName\\" to \\"ready\\"",
    "metadata": undefined,
  },
]
`;
